Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64072

Vista style: Opening new windows with QSpinBox becomes increasingly slower

    XMLWordPrintable

Details

    • da3a600824fa2f809fe2cdb317d528007c40eb43 (qtbase/dev. 9.1.2018. 5.11)

    Description

      To reproduce, run attached example and keep pressing "launch another window". It gets some milliseconds slower with every new window.

      Running in Luke Stackwalker shows that QFlat<enum Qt::WindowType>::operator& takes a lot of time, also some copy operations. They both seem to originate from QApplication::topLevelWidgets that is called by QWindowsXPStylePrivate::winId.

      Attachments

        1. opening_windows.lsd
          237 kB
        2. qtbug64072.zip
          6 kB
        3. qtbug64072.zip
          4 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes